Remove notion of `BlindedBlobsBundle` (#7674)